<resources>
    <string name="app_name">FinalProject5</string>
    <string name="title_activity_create__class">Create_Class</string>
    <string name="create_class">Create Course</string>
    <string name="end_date">End date</string>
    <string name="start_date">Start Date</string>
    <string name="name">Name</string>
    <string name="section_number">Section number</string>
    <string name="professor">Professor</string>
    <string name="create_Class">Create</string>
    <string name="cancel">Cancel</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="CreateAccount">Create Account</string>
    <string name="WelcomeMsg">Welcome to Grade Checker!</string>
    <string name="create">Create Account</string>
    <string name="title_activity_course_view">CourseView</string>
    <string name="successlogin">login was successful press okay to continue</string>
    <string name="goBack">TextView</string>
    <string name="date_assigned">Date Assigned</string>
    <string name="assignment_type">Assignment Type</string>
    <string name="due_date">Due Date</string>
    <string name="assignment_name">Assignment name</string>
    <string name="assignment_description">Assignment Description</string>
    <string name="max_score">Max Score</string>
    <string name="given_score">Given Score</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <string name="title_text">Title Text</string>
    <string name="sign_out">Sign Out</string>
    <string name="editUser">Edit User</string>
    <string name="editFirstname">New First Name</string>
    <string name="editLastname">New Last Name</string>
    <string name="editPass">New Password</string>
    <string name="editUsername">New Username</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="usernameView">Username</string>
    <string name="passwordView">Password</string>
    <string name="editProfile">Edit Profile</string>
    <string name="buttonUpdate">Update Profile</string>
    <string name="backButt">BackButton</string>
    <string name="enterUse">Enter Username</string>
    <string name="enterPas">Enter Password</string>
    <string name="EnterButt">Enter</string>
</resources>
