<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create_Assignment">

    <Button
        android:id="@+id/AssCreate"
        android:layout_width="157dp"
        android:layout_height="44dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="127dp"
        android:text="@string/create_Class"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AssDue" />

    <Button
        android:id="@+id/AssCancel"
        android:layout_width="157dp"
        android:layout_height="44dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="127dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AssCreate" />

    <EditText
        android:id="@+id/AssName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="@string/assignment_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/AssDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="@string/assignment_description"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AssName" />

    <EditText
        android:id="@+id/AssMax"
        android:layout_width="104dp"
        android:layout_height="43dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/max_score"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AssDetails" />

    <EditText
        android:id="@+id/AssEarned"
        android:layout_width="104dp"
        android:layout_height="43dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="@string/given_score"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AssDetails" />

    <EditText
        android:id="@+id/AssDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="@string/date_assigned"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AssType" />

    <EditText
        android:id="@+id/AssDue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="@string/due_date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AssDate" />

    <EditText
        android:id="@+id/AssType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="@string/assignment_type"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AssMax" />
</androidx.constraintlayout.widget.ConstraintLayout>